--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test:report": "NODE_ENV=test mocha --require test/setup.js --timeout=200000 --reporter mochawesome && start mochawesome-report/mochawesome.html"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "chai": "^6.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.5",
+    "mochawesome": "^7.1.4",
     "nodemailer": "^7.0.10",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.1"
   },
